Wrap the screenshot so we can display it at a slightly smaller max height to avoid aspect ratios not matching

--- a/client/my-sites/themes/auto-loading-homepage-modal.scss
+++ b/client/my-sites/themes/auto-loading-homepage-modal.scss
@@ -74,10 +74,16 @@
 		margin-left: 2%;
 
 		img,
-		.themes__iframe-wrapper {
+		.themes__iframe-wrapper,
+		.themes__theme-preview-image-wrapper {
 			display: block;
 			height: 100%;
+		}
+
+		.themes__iframe-wrapper,
+		.themes__theme-preview-image-wrapper {
 			max-height: 235px;
+			overflow: hidden;
 		}
 
 		.form-label {
